home layout bug fixed

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ body,
 
 .App {
   display: flex;
+  position: relative;
   flex-direction: column;
   justify-content: flex-start;
 }
@@ -129,10 +130,11 @@ header nav li:hover {
 
 .home {
   width: 100%;
-  min-height: 100%;
   flex-direction: column;
   justify-content: space-between;
-  display: none;
+  display: flex;
+  position: absolute;
+  bottom: 0;
 }
 
 .block-div {
