--- a/src/input.scss
+++ b/src/input.scss
@@ -20,9 +20,11 @@ body,
 }
 .App {
     display: flex;
+    position: relative;
     flex-direction: column;
     justify-content: flex-start;
 }
+
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
@@ -124,11 +126,12 @@ header {
 }
 .home {
     width: 100%;
-    min-height: 100%;
-    // position: absolute;
+    // min-height: 100%;
     flex-direction: column;
     justify-content: space-between;
-    display: none;
+    display: flex;
+    position: absolute;
+    bottom: 0;
 }
 
 .block-div {
